fix color contrast, responsive,
additional:
check all CP WA (passed)
check all CP line (matched)

--- a/src/components/CP.css
+++ b/src/components/CP.css
@@ -15,6 +15,6 @@
 {
     .swiper-container
     {
-        width: 768px;
+        width: 1024px;
     }
 }
